force-app/main/default/objects/ContractLine__c/fields/BillingEndDate__c.field-meta.xml
<CustomField>
    <fullName>BillingEndDate__c</fullName>
    <label>Billing End Date</label>
    <type>Date</type>
</CustomField>