force-app/main/default/objects/ContractLine__c/fields/BillingStartDate__c.field-meta.xml
<CustomField>
    <fullName>BillingStartDate__c</fullName>
    <label>Billing Start Date</label>
    <type>Date</type>
</CustomField>