force-app/main/default/objects/ContractLine__c/fields/ContractLineAmount__c.field-meta.xml
<CustomField>
    <fullName>ContractLineAmount__c</fullName>
    <label>Contract Line Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>