force-app/main/default/objects/ContractLine__c/fields/ContractLineId__c.field-meta.xml
<CustomField>
    <fullName>ContractLineId__c</fullName>
    <label>Contract Line Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>