force-app/main/default/objects/ContractLine__c/fields/RelatedAsset__c.field-meta.xml
<CustomField>
    <fullName>RelatedAsset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Asset</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Contract Lines</relationshipLabel>
    <relationshipName>Contract_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>