force-app/main/default/objects/ContractLine__c/fields/RevenueEndDate__c.field-meta.xml
<CustomField>
    <fullName>RevenueEndDate__c</fullName>
    <label>Revenue End Date</label>
    <type>Date</type>
</CustomField>