force-app/main/default/objects/ContractLine__c/fields/RevenueStartDate__c.field-meta.xml
<CustomField>
    <fullName>RevenueStartDate__c</fullName>
    <label>Revenue Start Date</label>
    <type>Date</type>
</CustomField>