force-app/main/default/objects/ContractLine__c/fields/SalesItem__c.field-meta.xml
<CustomField>
    <fullName>SalesItem__c</fullName>
    <label>Sales Item</label>
    <length>20</length>
    <type>Text</type>
</CustomField>