force-app/main/default/objects/ContractLine__c/recordTypes/WorkdayContractLine.recordType-meta.xml
<RecordType>
    <fullName>WorkdayContractLine</fullName>
    <active>true</active>
    <description>Record type used by Workday for integration</description>
    <label>Contract Line</label>
</RecordType>